# ai-agent

./: Dockerfile  README.md  help.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  models.py  tasks.py
app/data/: tickets.json
openenv-support-env/: Dockerfile  README.md  help.txt  inference.py  val.txt
openenv-support-env/app/: graders.py  reward.py
openenv-support-env/server/: app.py
openenv-support-env/support_env.egg-info/: PKG-INFO  requires.txt
server/: app.py
support_env.egg-info/: SOURCES.txt  entry_points.txt
