[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "support-env"
version = "0.1.0"
description = "AI customer support simulation environment"
dependencies = [
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["app"]
